--- a/_episodios.scss
+++ b/_episodios.scss
@@ -39,34 +39,40 @@
     padding-left: 100px;
     padding-right: 100px;
 }
-
-@media screen and (max-width: 769px){
-    .episodios{
-        padding-top: 100px ;
-        padding-bottom: 26px;
-    }
-    .cont-spot{
-        display: flex;
-        flex-direction: column;
-        padding-left: 100px;
-        padding-right: 10px;
-    }
+@media screen and (max-width: 1001px){
     .spot1{
-        width:80%;
-        height: 100%;
+        width: 300px;
+        height: 536px;
         display: flex;
         flex-direction: column;
-    }
-   .spot2{
-        width: 80%;
-        height: 100%;
+        justify-content: space-between;
+     }
+    .spot2{
+        width: 300px;
+        height: 536px;
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
-   .spotify-link{
-    padding-bottom: 11px;
+    
 }
+@media screen and (max-width: 769px){
+    .spot1{
+        width: 250px;
+        height: 536px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+     }
+    .spot2{
+        width: 250px;
+        height: 536px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
   
- }
+}
  @media screen and (max-width: 501px){
     .section-episodios{
         width: 100%;
@@ -76,7 +82,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding-left: 10px;
+        padding-left: 50px;
     }
     .spot1{
         width:95%;
@@ -104,6 +110,74 @@
         padding-top: 84px ;
         }
  }
+ @media screen and (max-width: 415px){
+    .section-episodios{
+        width: 100%;
+        height: 1203.5px; }
 
+    .cont-spot{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 80px;
+    }
+    .spot1{
+        width:95%;
+        height: 100%;
+    }
+    .spot2{
+        width:95%;
+        height: 100%;
+    }
+   .spotify-link{
+      width: 100%;
+      height: 295px;
+    }
+    .link-episodios{ /* titulo */
+        color:#FFFFFF;
+        font-size: 36px;
+        padding-left: 16px;
+        text-decoration: none;}
+    .gradient{
+        width: 100%;
+        background: linear-gradient(#0000FF,#0000A3 );
+        clip-path: polygon(0% 05%, 100% 0%, 100% 95%, 0% 100%);
+        height: 1500.6px; }
+    .episodios{
+        padding-top: 84px ;
+        }
+
+ }
+ @media screen and (max-width: 376px){
+    .section-episodios{
+        width: 100%;
+        height: 1203.5px; }
+
+    .cont-spot{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 16px;
+    }
+    .spot1{
+        width:298px;
+        height: 100%;
+    }
+    .spot2{
+        width: 298px;
+        height: 100%;
+    }
+   .spotify-link{
+      width:298px;
+      height: 300px;
+    }
+    .link-episodios{
+        color:#FFFFFF;
+        font-size: 36px;
+        padding-left: 5px;
+        text-decoration: none;}
+ 
+
+ }
 
 
