--- a/_aside.scss
+++ b/_aside.scss
@@ -35,7 +35,40 @@
 .button2:hover{
     background: linear-gradient(#0000FE,#00F0B8 );
     color: white;}
+@media screen and (max-width: 700px){
+    .h2-aside{
+        color:white;
+        font-size: 36px;
+        text-align: center;
+        line-height: 42px;
+        padding-bottom: 36px;
+        width: 80%;
+        margin: auto;
+        }
+     .aside{
+        height: 341px;
+        width: 100%;
+        background: linear-gradient(#0000FF,#0000A3 );
+        clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%); 
+        margin-top: 50px;
+        }
+    .gradiente{
+        display: flex;
+        justify-content: center;
+        height: 341px;
+        align-items:center ;
+        flex-direction: column;
+        }
+    .button2{
+        background-color: #00F3BB ;
+        width: 288px;
+        height: 48px;
+        font-size: 16px;
+        transition-duration:0.4s;
+        display: flex;
+        justify-content: center;}
 
+}  
 @media screen and (max-width: 501px){
     .h2-aside{
         color:white;
@@ -44,7 +77,7 @@
         line-height: 42px;
         padding-bottom: 36px;
         width: 80%;
-        padding-left: 70px;
+        margin: auto;
         }
      .aside{
         height: 341px;
@@ -78,7 +111,7 @@
     line-height: 42px;
     padding-bottom: 36px;
     width: 80%;
-    padding-left: 70px;
+    margin: auto;
 }
 .aside{
     height: 341px;
@@ -112,7 +145,7 @@
         line-height: 42px;
         padding-bottom: 36px;
         width: 80%;
-        padding-left: 70px;
+        margin: auto;
     }
     .aside{
         height: 341px;
