--- a/_header.scss
+++ b/_header.scss
@@ -141,6 +141,40 @@ header{
        margin-right: 200px;}
 
 }
+@media screen and (max-width:640px){
+    header{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .cont-li{
+        display: flex;
+        list-style: none;
+    }
+    .link-menu{
+        text-decoration: none;
+        color:rgba(6,10,36,1);
+        padding-left: 10px;
+        font-size: 16px;
+    }
+    .link-menu:hover{
+        font-size: 16px;
+        color: #00F3BB;
+        letter-spacing: 0;
+        line-height: 28px; 
+        text-decoration: line-through;
+      }
+    .imagen-logo{
+        padding-left: 16px;
+        padding-top: 50px;
+    }
+    .nav-menu{
+        padding-top: 50px;
+        width: 50%;
+       margin-right: 200px;}
+
+}
 @media screen and (max-width:501px){
     header{
         width: 100%;
