--- a/_invitados.scss
+++ b/_invitados.scss
@@ -20,7 +20,7 @@
     padding-bottom: 36px;
     font-family: 'IBM Plex Sans', sans-serif;
 }
-/*  */
+
 @media screen and (max-width: 320px){
 
     .invitados{
@@ -78,6 +78,37 @@
     
 }
 @media screen and (max-width: 632px){
+
+    .invitados{
+        height: 1603px;
+        width: 100%;
+    }
+    .cont{
+        display: flex;
+    }
+    .img{
+        width: 100%;
+        height: 243px;
+       
+    }
+    .cont-img{
+        width: 100%;
+        height: 243px;
+    }
+    .h2_inv_estelares{
+        font-size: 36px;
+        color:#060A24;
+        padding-left: 20px;
+        padding-bottom: 14px;
+        line-height: 42px;
+    }
+
+
+
+    
+}
+
+@media screen and (max-width: 700px){
 
     .invitados{
         height: 1603px;
