--- a/_temas.scss
+++ b/_temas.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: auto;
     padding-top: 30px;
 }
 .img-temas{
@@ -63,7 +64,54 @@
     }
 
 }
+@media screen and (max-width: 701px){
+    .temas{
+        width: 100%;
+        height: 500px;
+        margin-top: -1000px;
+    }
+    
+    .cont-itemas{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(2,1fr) ;
+        padding-left: 100px;
+    }
+    .h2_temas{
+        font-size: 48px;
+        color: #060A24;
+        letter-spacing: 0;
+        padding: 20px 0px 36px 100px;  
+    }
+
+}
+@media screen and (max-width: 645px){
+    .temas{
+        width: 100%;
+        height: 500px;
+        margin-top: -1000px;
+    }
+    
+    .cont-itemas{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(2,1fr) ;
+        padding-left: 100px;
+    }
+    .h2_temas{
+        font-size: 48px;
+        color: #060A24;
+        letter-spacing: 0;
+        padding: 20px 0px 36px 100px;  
+    }
+
+}
 @media screen and (max-width: 501px){
+    .temas{
+        width: 100%;
+        height: 900px;
+        margin-top: -50px;
+    }
     .cont-itemas{
         display: grid;
         grid-template-columns: 20% 40% 20%;
@@ -113,6 +161,7 @@
         letter-spacing: 0;
         padding: 64px 0px 36px 10px;  
         width: 288px;
+        margin: auto;
     }
    
 
@@ -173,13 +222,12 @@
 @media screen and (max-width: 361px){
     .cont-itemas{
         display: grid;
-        grid-template-columns: 1f;
-        grid-template-rows:repeat(4,1fr) ;
+        grid-template-columns: 1fr;
+        grid-template-rows:repeat(4,1fr);
     }
     .nav-temas{
         width: 80%;
         padding-right: 80px;
-        
     }
     .li-temas{
         display: flex;
@@ -187,7 +235,6 @@
         justify-content: center;
         align-content: center;
         padding-top: 30px;
-        margin-right: 500px;
     }
     .img-temas{
         width: 104px;
@@ -219,7 +266,7 @@
         font-size: 36px;
         color: #060A24;
         letter-spacing: 0;
-        padding: 30px 0px 36px 40px;  
+        padding: 30px 0px 36px 30px;  
         width: 288px;
     }
 
@@ -227,7 +274,7 @@
 @media screen and (max-width: 321px){
     .cont-itemas{
         display: grid;
-        grid-template-columns: 1f;
+        grid-template-columns: 1fr;
         grid-template-rows:repeat(4,1fr) ;
     }
     .nav-temas{
