--- a/_episodios.scss
+++ b/_episodios.scss
@@ -2,6 +2,8 @@
 .section-episodios{
     width: 100%;
     height: 1042.6px;
+    background: linear-gradient(#0000FF,#0000A3 );
+    clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .episodios{
@@ -13,12 +15,9 @@
     color:#FFFFFF;
     font-size: 48px;
     padding-left: 200px;
-    text-decoration: none;}
-.gradient{
-    width: 100%;
-    background: linear-gradient(#0000FF,#0000A3 );
-    clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-    height: 1042.6px; }
+    text-decoration: none;
+    margin: auto;}
+
 
 .cont-spot{
     width: 100%;
@@ -55,11 +54,7 @@
         font-size: 48px;
         padding-left: 200px;
         text-decoration: none;}
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1042.6px; }
+    
     
     .cont-spot{
         width: 100%;
@@ -91,11 +86,7 @@
         font-size: 48px;
         padding-left: 200px;
         text-decoration: none;}
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1042.6px; }
+    
     
     .cont-spot{
         width: 100%;
@@ -119,11 +110,7 @@
         height: 1500.6px;
 
     }
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1500.6px; }
+    
     .cont-spot{
         width: 100%;
         display: flex;
@@ -154,13 +141,8 @@
     .section-episodios{
         width: 100%;
         height: 1500.6px;
-
     }
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1500.6px; }
+  
 
     .link-episodios{
         color:#FFFFFF;
@@ -200,11 +182,6 @@
         height: 1500.6px;
 
     }
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1500.6px; }
 
     .link-episodios{
         color:#FFFFFF;
@@ -243,11 +220,6 @@
         height: 1200.6px;
 
     }
-    .gradient{
-        width: 100%;
-        background: linear-gradient(#0000FF,#0000A3 );
-        clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-        height: 1200.6px; }
 
     .link-episodios{
         color:#FFFFFF;
@@ -277,7 +249,6 @@
         margin: 15px;
         padding-left: 5px;
         justify-content: center;
-    
     }
 
  }
