--- a/_footer.scss
+++ b/_footer.scss
@@ -2,10 +2,10 @@
     width:100%;
     height: 95px;
     align-items: center;
-    padding-right:100px;
-    padding-left: 100px;
     display: flex;
     justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 .img-footer{
     width: 18px;
@@ -15,7 +15,7 @@
 @media screen and (max-width: 320px){
     .footer{
         width:100%;
-        height: 121px;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
