--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,12 @@
     list-style: none;
 }
 
+body{
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 @import "./header";
 @import "./titulo";
 @import "./episodios";
