--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
   list-style: none;
 }
 
+body {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 header {
   width: 100%;
   display: -webkit-box;
