--- a/_episodios.scss
+++ b/_episodios.scss
@@ -35,8 +35,9 @@
 .spotify-link{
     width: 584px;
     height: 232px;
-    margin: 15px
-
+    margin: 15px;
+    background-color: transparent;
+    border:white;
 }
 @media screen and (max-width: 1345px){
     .section-episodios{
@@ -66,7 +67,9 @@
     .spotify-link{
         width: 530px;
         height: 232px;
-        margin: 15px
+        margin: 15px;
+        background-color: transparent;
+        border:white;
     }
   
 }
@@ -99,7 +102,9 @@
     .spotify-link{
         width: 470px;
         height: 232px;
-        margin: 15px
+        margin: 15px;
+        background-color: transparent;
+        border:white;
     
     }
   
@@ -133,6 +138,8 @@
         height: 232px;
         margin: 15px;
         justify-content: center;
+        background-color: transparent;
+        border:white;
     
     }
    
@@ -172,6 +179,8 @@
         margin: 15px;
         padding-left: 20px;
         justify-content: center;
+        background-color: transparent;
+        border:white;
     
     }
 
@@ -210,6 +219,8 @@
         height: 232px;
         margin: 15px 15px 15px -10px;
         justify-content: center;
+        background-color: transparent;
+        border:white;
     
     }
 
@@ -249,6 +260,8 @@
         margin: 15px;
         padding-left: 5px;
         justify-content: center;
+        background-color: transparent;
+        border:white;
     }
 
  }
