--- a/_footer.scss
+++ b/_footer.scss
@@ -7,12 +7,12 @@
     padding-left: 100px;
     padding-right: 100px;
 }
-.img-footer{
+.icono-footer{
     width: 18px;
     height: 28px;
     margin-left: 20px;
 }
-@media screen and (max-width: 320px){
+@media screen and (max-width: 321px){
     .footer{
         width:100%;
         height: 100vh;
@@ -25,18 +25,17 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin-right: 0px;
-        margin-top: -40px;
-    }
-    .icono{
-        align-self: center;
-        margin-bottom: 32px;
-        width: 16px;
-        height: 28px;
-        margin-right: 40px;
     } 
+    .icono-footer{
+        align-self: center;
+        width: 18px;
+        height: 28px;
+        margin-left: 3px;
+        padding-left: 10px;
+    }
     .cont-p-footer{
         width: 227px;
+        margin-left: 40px;
     }
 
 }
@@ -53,10 +52,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin-right: 0px;
-        margin-top: -40px;
     }
-    .icono{
+    .icono-footer{
         align-self: center;
         margin-bottom: 32px;
         width: 16px;
