--- a/_header.scss
+++ b/_header.scss
@@ -69,7 +69,7 @@ header{
 }
 .link-menu:active{
     font-size: 16px;
-    color: #060A24 56%;
+    color: #060A24;
     letter-spacing: 0;
     line-height: 28px; 
     text-decoration: line-through;
